dev_app_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-application
  namespace: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-app
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
      - name: dev-container
        image: ondrejnr/dev-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
